opam-version: "2.0"
version: "1.0.2~prerel8"
synopsis: "Common runtime code used in DKML"
description: "Common runtime code used in DKML"
maintainer: ["opensource+diskuv-ocaml@support.diskuv.com"]
authors: ["Diskuv, Inc. <opensource+diskuv-ocaml@support.diskuv.com>"]
license: "Apache-2.0"
homepage: "https://github.com/diskuv/dkml-runtime-common"
bug-reports: "https://github.com/diskuv/dkml-runtime-common/issues"
dev-repo: "git+https://github.com/diskuv/dkml-runtime-common.git"
#   Must not rely on OCaml (ex. diskuvbox) because this
#   package is a dependency of OCaml compilers like dkml-base-compiler!
depends: []
#   However if Dune is present, use it. That way this package works in
#   opam-monorepo. One use of this is for with-dkml in dkml-runtime-apps
#   that can be a shim for dune.
depopts: [
  "dune"
]
build: [
  ["dune" "build" "-p" name] {dune:installed}
]
install: [
  [".\\install.cmd"  "%{_:lib}%"] { !dune:installed &   os = "win32"}
  ["./install.sh" "%{_:lib}%"]  {   !dune:installed & !(os = "win32")}
]